style/components/_res.scss
// main: ../main.scss

.res .thing .tagline .author,
.thing .tagline .author {
  border-radius: 2px !important;
}

.res .thing .tagline .author.moderator,
.thing .tagline .author.moderator {
  color: set-text-color(get-color('green'), text);
  background-color: get-color('green') !important;

  &:hover {
    background-color: set-text-color(get-color('green'), '700');
  }
}

#modalOverlay {
  background-color: $light-disabled-text !important;
}

#RESConsoleContainer {
  @include drop-shadow(6);

  * { box-sizing: initial; }
}

.res-nightmode .infobar:not(.newsletterbar) .md,
.res-nightmode .reddit-infobar .md {
  color: inherit !important;
}

// RES tips & tricks
.guiders_content h2 { font-size: initial; }

// dialog box when hovering over a user
.RESDialogSmall {
  &::before,
  &::after {
    display: none !important;
  }

  @include drop-shadow(5);
}

.RESDialogSmall,
.RESDialogSmall * {
  box-sizing: content-box;
  border: 0 !important;
}

